# musync

./: .gitignore  LICENSE  README.md  pyproject.toml
beetsplug/: musync.py
beetsplug/musync/: musync.py
